# OC_AI_Engineer_P5

./: .gitignore  Dockerfile  README.md  README_BDD.md  attrition.db  docker-compose.yml  pyproject.toml  test.db
.github/workflows/: ci.yml  deploy.yml
app/: config.py  main.py
app/middleware/: auth.py
app/models/: database.py  orm.py  schemas.py
app/routers/: health.py  predictions.py
app/services/: db_service.py  ml_service.py
ml_models/: best_rf_model.joblib
scripts/: create_db.sql  init_db.py
tests/: conftest.py  test_auth.py  test_db.py  test_health.py  test_ml_service.py  test_predictions.py  test_schemas.py
