[project]
name = "api"
version = "1.0.0"
description = "API de prédiction d'attrition employés - Projet P5 OpenClassrooms"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "scikit-learn>=1.4.0",
    "imbalanced-learn>=0.12.0",
    "joblib>=1.4.0",
    "pandas>=2.0.0",
    "numpy>=1.26.0,<2.0.0",
    "bcrypt>=4.0.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.15.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=app --cov-report=html --cov-report=term-missing"

[tool.ruff]
target-version = "py311"
line-length = 100
